# vllm-gaudi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  0001-Update-OffloadingHandler-change-for-hpu-along-with-v.patch  AGENTS.md  CLAUDE.md  README.md  VLLM_COMMUNITY_COMMIT  VLLM_STABLE_COMMIT  benchmark_results.xlsx  blog.txt  client.py  client_q3_31.sh  client_q3_36.sh  commit_diff_main_vs_releases_v0.17.1.md  compare_qwen3next_debug_pt.py  debug_changes_unified_attention_softmax_unique.diff  dupa.txt  install.sh  install_nixl.py  latest_uncommited_changes_causal_shared.diff  log.txt  log_q3_moe.txt  log_q3_remove.txt  log_q3_rm_g_s.txt  log_q3_v0.14.1.txt  log_v14.txt  main.py  mkdocs.yaml  multiconn_dbg.diff  parse_benchmark_results.py  partial_attn_unique_diff_unified_attention_softmax_unique.diff  pyproject.toml  pytest_compat.py  q  q35.sh  q35_8x.sh  q35_image.sh  q35_video.sh  q35r.sh  (+16 more)
.cd/: Dockerfile.rhel.tenc.pytorch.vllm  Dockerfile.rhel.ubi.vllm  Dockerfile.rhel.ubi.vllm.no-torchaudio  Dockerfile.ubuntu.pytorch.vllm  Dockerfile.ubuntu.pytorch.vllm.nixl.latest  Dockerfile.ubuntu.pytorch.vllm.nixl.latest.no-torchaudio  Dockerfile.ubuntu.pytorch.vllm.no-torchaudio  OLD-docker-compose.override.yml.OLD  README.md  docker-compose.yml
.cd/benchmark/: benchmark_defaults.yaml  (+4 more)
.github/: CODEOWNERS  Dockerfile.ci  TESTOWNERS  actionlint.yaml  copilot-instructions.md
.jenkins/: test_config.yaml  test_config_t_compile.yaml
.omc/: project-memory.json
calibration/: README.md  calibrate_model.sh  deepseek_gaudi2_converter.py  step-1-prepare-calibration-dataset.py  step-2-measure-scales.py  step-3-postprocess-measure.py  step-4-quantize-scales.py  step-5-unify_measurements.py  step-6-expand-measurements.py
docs/: .nav.yml  README.md  release_notes.md  release_notes_v0.15.1.md  release_notes_v0.16.0.md  release_notes_v0.17.1.md  release_notes_v0.19.0.md  release_notes_v0.19.1.md  release_notes_v0.19.1.post1.md  release_notes_v0.21.0.md  release_notes_v0.24.0.md
examples/: data_parallel.py  run_tests.sh  run_tests_v1.sh  test_gsm8k.py  test_plugin.py
script/: convert_for_step3p5.py
scripts/: high_level_profile_to_csv.py  parse_model_time.py  run_benchmark_profile_device.sh  run_benchmark_profileentire.sh  run_benchmark_set.sh
tests/: 2layer_test_tp4.py  conftest.py  test_llama_70b_2layer_tp4.py
tools/: check_spdx_header.py  check_triton_import.py  enforce_regex_import.py  granite4_long_context_analysis.py  install_nixl_gaudi_gdr.sh  mypy.sh  report_build_time_ninja.py
vllm_gaudi/: __init__.py  _torch_compat.py  envs.py  patches.py  platform.py  utils.py
vllm_hpu/: __init__.py  _version.py  platform.py
(+738 files in other folders)
